# genai-codelab

./: .gitignore  README.md
deployment/: Makefile  README.md  cloudrun-chromadb.yml  cloudrun-ollama.yml
java/: README.md  pom.xml
java/src/main/java/com/zenika/genai/codelab/: ChatBot.java
js/: README.md  java_introduction.txt  package-lock.json  package.json
js/src/: app.js
python/: INGESTOR.md  Makefile  README.md  pyproject.toml
python/data/: Nantes.txt  Nantes_en.txt
python/src/: app.py  ui.py
