[tool.poetry]
name = "genai-codelab"
version = "0.1.0"
description = ""
authors = ["glefloch <glfloch@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
langchain = "^0.3.1"
langchain-ollama = "^0.2.0"
langchain-community = "^0.3.1"
bs4 = "^0.0.2"
pypdf = "^4.1.0"
unstructured = {version= "^0.15.3", extras = ["pdf"]}



[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
